// Vitest Snapshot v1

exports[`one click + pointer move > guides are two points + line string 1`] = `
{
  "features": [
    {
      "geometry": {
        "coordinates": [
          [
            1,
            2,
          ],
          [
            3,
            4,
          ],
        ],
        "type": "LineString",
      },
      "properties": {
        "guideType": "tentative",
      },
      "type": "Feature",
    },
    {
      "geometry": {
        "coordinates": [
          1,
          2,
        ],
        "type": "Point",
      },
      "properties": {
        "editHandleType": "existing",
        "featureIndex": -1,
        "guideType": "editHandle",
        "positionIndexes": [
          0,
        ],
      },
      "type": "Feature",
    },
  ],
  "type": "FeatureCollection",
}
`;

exports[`one click + pointer move > tooltip contains distance 1`] = `
[
  {
    "position": [
      3,
      4,
    ],
    "text": "314.28 kilometers",
  },
]
`;

exports[`one click > guides are a single point 1`] = `
{
  "features": [
    {
      "geometry": {
        "coordinates": [
          [
            1,
            2,
          ],
          [
            1,
            2,
          ],
        ],
        "type": "LineString",
      },
      "properties": {
        "guideType": "tentative",
      },
      "type": "Feature",
    },
    {
      "geometry": {
        "coordinates": [
          1,
          2,
        ],
        "type": "Point",
      },
      "properties": {
        "editHandleType": "existing",
        "featureIndex": -1,
        "guideType": "editHandle",
        "positionIndexes": [
          0,
        ],
      },
      "type": "Feature",
    },
  ],
  "type": "FeatureCollection",
}
`;

exports[`three clicks + pointer move + press Enter > tooltip contains distance 1`] = `
[
  {
    "position": [
      3,
      4,
    ],
    "text": "314.28 kilometers",
  },
  {
    "position": [
      4,
      5,
    ],
    "text": "471.29 kilometers",
  },
  {
    "position": [
      6,
      7,
    ],
    "text": "784.93 kilometers",
  },
]
`;

exports[`three clicks + pointer move + press Escape > tooltip contains distance 1`] = `
[
  {
    "position": [
      3,
      4,
    ],
    "text": "314.28 kilometers",
  },
  {
    "position": [
      4,
      5,
    ],
    "text": "471.29 kilometers",
  },
]
`;

exports[`three clicks + pointer move > tooltip contains distance 1`] = `
[
  {
    "position": [
      3,
      4,
    ],
    "text": "314.28 kilometers",
  },
  {
    "position": [
      4,
      5,
    ],
    "text": "471.29 kilometers",
  },
  {
    "position": [
      6,
      7,
    ],
    "text": "784.93 kilometers",
  },
]
`;

exports[`two clicks + pointer move > tooltip contains distance 1`] = `
[
  {
    "position": [
      3,
      4,
    ],
    "text": "314.28 kilometers",
  },
  {
    "position": [
      4,
      5,
    ],
    "text": "471.29 kilometers",
  },
]
`;

exports[`two clicks > guides are two points + line string 1`] = `
{
  "features": [
    {
      "geometry": {
        "coordinates": [
          [
            1,
            2,
          ],
          [
            3,
            4,
          ],
          [
            3,
            4,
          ],
        ],
        "type": "LineString",
      },
      "properties": {
        "guideType": "tentative",
      },
      "type": "Feature",
    },
    {
      "geometry": {
        "coordinates": [
          1,
          2,
        ],
        "type": "Point",
      },
      "properties": {
        "editHandleType": "existing",
        "featureIndex": -1,
        "guideType": "editHandle",
        "positionIndexes": [
          0,
        ],
      },
      "type": "Feature",
    },
    {
      "geometry": {
        "coordinates": [
          3,
          4,
        ],
        "type": "Point",
      },
      "properties": {
        "editHandleType": "existing",
        "featureIndex": -1,
        "guideType": "editHandle",
        "positionIndexes": [
          1,
        ],
      },
      "type": "Feature",
    },
  ],
  "type": "FeatureCollection",
}
`;

exports[`two clicks > tooltip contains distance 1`] = `
[
  {
    "position": [
      3,
      4,
    ],
    "text": "314.28 kilometers",
  },
  {
    "position": [
      3,
      4,
    ],
    "text": "314.28 kilometers",
  },
]
`;
